--- a/src/main/html/library.html
+++ b/src/main/html/library.html
@@ -36,7 +36,7 @@
                         <i class="bi bi-arrow-clockwise" onclick="location.reload();"></i>
                         <i class="bi bi-download" onclick="location.href = 'downloads.html';"></i>
                         <i class="bi bi-gear-wide" onclick="location.href = 'settings.html';"></i>
-                        <i class="bi bi-bell" data-bs-toggle="offcanvas" data-bs-target="#notifications" onclick="openNotifications();"></i>
+                        <i class="bi bi-bell" data-bs-toggle="offcanvas" onclick="openNotifications();"></i>
                     </div>
                 </div>
                 <div class="card-body p-0">
