--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -12,31 +12,31 @@
     </head>
     <body data-bs-theme="dark">
         <div id="main">
-            <div id="menu">
+            <div id="menu" class="transition">
                 <ul>
                     <li onclick="toggleMenu();">
                         <i class="bi bi-list"></i>
                         <span>Toggle menu</span>
                     </li>
-                    <li onclick="loadPage('discover.html',true); highlight(this);">
+                    <li id="discover-button" onclick="loadPage('discover.html',true); highlight(this);">
                         <i class="bi bi-globe-europe-africa"></i>
                         <span>Discover</span>
                     </li>
-                    <li onclick="loadPage('library.html',false); highlight(this);">
+                    <li id="library-button" onclick="loadPage('library.html',false); highlight(this);">
                         <i class="bi bi-grid-fill"></i>
                         <span>Library</span>
                     </li>
                 </ul>
             </div>
-            <div class="menu-panel shadow card bg-dark-subtle">
+            <div class="menu-panel shadow card bg-dark-subtle transition">
                 <div class="card-header">
                     <i class="mode bi" onclick="changePanelMode();"></i>
                     <span><strong>NEXUS</strong> App</span>
                     <div class="panel-toggle" onclick="togglePanel();"></div>
                     <div class="buttons">
                         <i class="bi bi-arrow-clockwise" onclick="location.reload();"></i>
-                        <i class="bi bi-download" onclick="loadPage('downloads.html',false); highlight(this);"></i>
-                        <i class="bi bi-gear-wide" onclick="loadPage('settings.html',false); highlight(this);"></i>
+                        <i id="downloads-button" class="bi bi-download" onclick="loadPage('downloads.html',false); highlight(this);"></i>
+                        <i  id="settings-button" class="bi bi-gear-wide" onclick="loadPage('settings.html',false); highlight(this);"></i>
                         <i class="bi bi-bell" data-bs-toggle="offcanvas" onclick="openNotifications();"></i>
                     </div>
                 </div>
