--- a/src/main/html/loading.html
+++ b/src/main/html/loading.html
@@ -1,3 +1,4 @@
+<link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
 <div class="w-100 h-100 position-absolute d-flex justify-content-center align-items-center">
     <i class='bx bx-loader-alt bx-spin bx-rotate-90' style='font-size: 4rem;' ></i>
 </div>
