Add bottom border function

--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -104,7 +104,7 @@
             <div class="card-body p-0">
                 <table class="table m-0">
                     <tbody>
-                    <tr>
+                    <tr class="floating-switch">
                         <td class="left" colspan="2">Floating</td>
                         <td class="right">
                             <div class="form-switch">
