Add glass effect for the panel

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="menu-panel shadow card bg-dark-subtle transition">
+            <div class="menu-panel shadow card transition">
                 <div class="card-header">
                     <i class="mode bi" onclick="changePanelMode();"></i>
                     <span><strong>NEXUS</strong> App</span>
