Remove broken menu colors settings for panel and fix panel inline mode

--- a/src/main/html/discover.html
+++ b/src/main/html/discover.html
@@ -1,5 +1,21 @@
-<div class="position-absolute w-100 h-100">
-    <nav class="navbar navbar-expand-lg bg-dark-subtle shadow m-3 border rounded">
+<style>
+    #discover {
+        background: url("assets/nexus/img/bg/discover-home.png") no-repeat center;
+        background-size: cover;
+
+        #header {
+            height: 90%; width: 100%;
+            background: linear-gradient(to bottom, transparent, var(--bs-body-bg));
+        }
+
+        #news {
+            min-height: 10%; width: 100%;
+            background: var(--bs-body-bg);
+        }
+    }
+</style>
+<div id="discover" class="position-relative w-100 h-100 d-flex flex-column">
+    <nav class="navbar position-absolute navbar-expand-lg glass rounded-2 overflow-hidden shadow" style="z-index: 99; width: calc(100% - 2rem); height: 3.75rem; margin: 1rem; border: 1px solid var(--bs-border-color-translucent);">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -7,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -16,4 +32,11 @@
             </div>
         </div>
     </nav>
+    <div id="header" class="p-3">
+
+    </div>
+    <div id="news" class="p-3">
+
+    </div>
 </div>
+<button onclick="enableMenu(true);" class="onload d-none">On page load</button>
