--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -42,7 +42,10 @@
                     </div>
                 </div>
                 <div class="card-body p-0">
-
+                    <i onclick="window.open('https://discord.gg/Awwh6JrJBS','_blank');" class="bi bi-discord"></i>
+                    <i onclick="window.open('https://github.com/zyneonstudios/nexus-app','_blank');" class="bi bi-github"></i>
+                    <i onclick="window.open('https://nexus.zyneonstudios.org/app','_blank');" class="bi bi-globe"></i>
+                    <i onclick="console.log('[CONNECTOR] exit')" class="bi bi-door-open"></i>
                 </div>
             </div>
             <div id="content" class="position-relative">
