--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -4,6 +4,7 @@
         <title>NEXUS App</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="assets/nexus/img/app.ico">
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="assets/bootstrap/icons/font/bootstrap-icons.min.css">
         <link href="assets/nexus/css/shared.css" rel="stylesheet">
