disable light mode temporarily

--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -18,11 +18,11 @@
             <div class="card-body p-0">
                 <table class="table m-0">
                     <tbody>
-                    <tr>
+                    <tr class="disabled">
                         <td class="left" colspan="2">Theme</td>
                         <td class="right">
                             <label>
-                                <select class="form-select appearance-theme" onchange="theme = this.value; updateTheme();">
+                                <select class="form-select appearance-theme disabled" disabled onchange="theme = this.value; updateTheme();">
                                     <option value="auto">Automatic</option>
                                     <option value="dark">Dark</option>
                                     <option value="light">Light</option>
