Add basic modules functionality

--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -3,7 +3,11 @@
     <div class="card bg-dark-subtle submenu" style="margin: 0.5rem;">
         <div class="submenu-group">
             <h6>General settings</h6>
-            <button type="button" class="btn btn-nex-secondary active">
+            <button type="button" class="btn btn-nex-secondary">
+                <i class="bi bi-brush"></i>
+                <span>Appearance settings</span>
+            </button>
+            <button type="button" class="btn btn-nex-secondary">
                 <i class="bi bi-brush"></i>
                 <span>Appearance settings</span>
             </button>
