Refactor code and add code comments

--- a/src/main/html/discover.html
+++ b/src/main/html/discover.html
@@ -1,42 +1,61 @@
 <style>
+    /* Styling for the main discover section */
     #discover {
-        background: url("assets/nexus/img/bg/discover-home.png") no-repeat center;
-        background-size: cover;
+        background: url("assets/nexus/img/bg/discover-home.png") no-repeat center; /* Background image */
+        background-size: cover; /* Cover the entire area */
+        /* The following styles are now applied to the child elements */
+    }
 
-        #header {
-            height: 90%; width: 100%;
-            background: linear-gradient(to bottom, transparent, var(--bs-body-bg));
-        }
+    /* Styling for the header section within discover */
+    #discover #header {
+        height: 90%; /* Takes up 90% of the discover section's height */
+        width: 100%; /* Full width */
+        background: linear-gradient(to bottom, transparent, var(--bs-body-bg)); /* Gradient from transparent to background color */
+    }
 
-        #news {
-            min-height: 10%; width: 100%;
-            background: var(--bs-body-bg);
-        }
+    /* Styling for the news section within discover */
+    #discover #news {
+        min-height: 10%; /* Takes up at least 10% of the discover section's height */
+        width: 100%; /* Full width */
+        background: var(--bs-body-bg); /* Background color */
     }
 </style>
+
+<!-- Main container for the discover section -->
 <div id="discover" class="position-relative w-100 h-100 d-flex flex-column">
-    <nav class="navbar position-absolute navbar-expand-lg glass rounded-2 overflow-hidden shadow" style="z-index: 99; width: calc(100% - 2rem); height: 3.75rem; margin: 1rem; border: 1px solid var(--bs-border-color-translucent);">
+    <!-- Navigation bar -->
+    <nav class="navbar position-absolute navbar-expand-lg glass rounded-2 overflow-hidden shadow"
+         style="z-index: 99; width: calc(100% - 2rem); height: 3.75rem; margin: 1rem; border: 1px solid var(--bs-border-color-translucent);">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Navbar toggler button for smaller screens -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Collapsible navbar content -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- Navbar links -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                 </ul>
+                <!-- Search form -->
                 <form class="d-flex" role="search">
                     <input class="form-control rounded-3" type="search" placeholder="Search" aria-label="Search">
                 </form>
             </div>
         </div>
     </nav>
+    <!-- Header section -->
     <div id="header" class="p-3">
-
+        <!-- Content for the header will go here -->
     </div>
+    <!-- News section -->
     <div id="news" class="p-3">
-
+        <!-- Content for the news will go here -->
     </div>
 </div>
+<!-- Button to trigger menu enabling (likely for JavaScript) -->
 <button onclick="enableMenu(true);" class="onload d-none">On page load</button>
