--- a/src/main/html/downloads.html
+++ b/src/main/html/downloads.html
@@ -1,35 +1,44 @@
-<div class="card disabled m-3 bg-dark-subtle shadow">
+<div class="card m-3 bg-dark-subtle shadow disabled download-card">
+    <!-- Card Header: Displays the status message when no download is running -->
     <div class="card-header">
         <strong>No running download...</strong>
     </div>
+    <!-- Card Body: Contains download information and progress bar -->
     <div class="card-body">
-        <div class="d-flex">
+        <!-- Download Information: Displays elapsed time, download size, and download speed -->
+        <div class="d-flex download-info">
+            <!-- Elapsed Time -->
             <div class="w-100">
                 <span>
                     <strong>Elapsed time</strong>
-                    <br>-
+                    <br><span class="elapsed-time">-</span>
                 </span>
             </div>
+            <!-- Download Size -->
             <div class="w-100">
                 <span>
                     <strong>Download size</strong>
-                    <br>-
+                    <br><span class="download-size">-</span>
                 </span>
             </div>
+            <!-- Download Speed -->
             <div class="w-100">
                 <span>
                     <strong>Download speed</strong>
-                    <br>-
+                    <br><span class="download-speed">-</span>
                 </span>
             </div>
         </div>
         <br>
-        <span><strong>File size</strong> -</span>
-        <div class="progress" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar"></div>
+        <!-- File Size: Displays the total file size -->
+        <span><strong>File size</strong> <span class="file-size">-</span></span>
+        <!-- Progress Bar: Shows the download progress -->
+        <div class="progress" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar download-progress-bar" style="width: 0%;"></div>
         </div>
+        <!-- Remaining Time: Displays the estimated remaining time -->
         <span>
-            <strong>Remaining time:</strong> -
+            <strong>Remaining time:</strong> <span class="remaining-time">-</span>
         </span>
     </div>
 </div>
