--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -1,56 +1,87 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <!-- Title of the application -->
         <title>NEXUS App</title>
+        <!-- Character set and viewport settings -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="assets/nexus/img/app.ico">
+        <!-- Bootstrap CSS -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="assets/bootstrap/icons/font/bootstrap-icons.min.css">
+        <!-- Shared CSS for the NEXUS app -->
         <link href="assets/nexus/css/shared.css" rel="stylesheet">
+        <!-- Shared JavaScript for the NEXUS app -->
         <script src="assets/nexus/js/shared.js"></script>
+        <!-- Settings JavaScript for the NEXUS app -->
         <script src="assets/nexus/js/settings.js"></script>
     </head>
+    <!-- Body of the application -->
     <body data-bs-theme="dark" class="d-flex flex-column h-100 w-100 position-absolute">
+        <!-- Title bar (likely for custom window controls) -->
         <div id="titlebar" style="height: 2rem;"></div>
+        <!-- Main content area -->
         <div id="main" class="d-flex position-relative h-100">
+            <!-- Main menu -->
             <div id="menu" class="transition">
                 <ul>
+                    <!-- Toggle menu button -->
                     <li onclick="toggleMenu();">
                         <i class="bi bi-list"></i>
                         <span>Toggle menu</span>
                     </li>
+                    <!-- Discover page button -->
                     <li id="discover-button" onclick="loadPage('discover.html',true); highlight(this);">
                         <i class="bi bi-globe-europe-africa"></i>
                         <span>Discover</span>
                     </li>
+                    <!-- Library page button -->
                     <li id="library-button" onclick="loadPage('library.html',false); highlight(this);">
                         <i class="bi bi-grid-fill"></i>
                         <span>Library</span>
                     </li>
                 </ul>
             </div>
+            <!-- Menu panel (right side) -->
             <div class="menu-panel shadow card transition">
+                <!-- Menu panel header -->
                 <div class="card-header">
+                    <!-- Panel mode toggle -->
                     <i class="mode bi" onclick="changePanelMode();"></i>
+                    <!-- App name -->
                     <span><strong>NEXUS</strong> App</span>
+                    <!-- Panel toggle button -->
                     <div class="panel-toggle" onclick="togglePanel();"></div>
+                    <!-- Panel buttons -->
                     <div class="buttons">
+                        <!-- Downloads page button -->
                         <i id="downloads-button" class="bi bi-download" onclick="loadPage('downloads.html',false); highlight(this);"></i>
+                        <!-- Settings page button -->
                         <i id="settings-button" class="bi bi-gear-wide" onclick="loadPage('settings.html',false); highlight(this);"></i>
+                        <!-- Notifications button -->
                         <i class="bi bi-bell" data-bs-toggle="offcanvas" onclick="openNotifications();"></i>
                     </div>
                 </div>
+                <!-- Menu panel body -->
                 <div class="card-body p-0">
+                    <!-- Discord link -->
                     <i onclick='window.open(`https://discord.gg/Awwh6JrJBS`,`_blank`);' class='bi bi-discord'></i>
+                    <!-- GitHub link -->
                     <i onclick="window.open('https://github.com/zyneonstudios/nexus-app','_blank');" class="bi bi-github"></i>
+                    <!-- Website link -->
                     <i onclick="window.open('https://nexus.zyneonstudios.org/app','_blank');" class="bi bi-globe"></i>
+                    <!-- Exit button (likely for a desktop app) -->
                     <i onclick="console.log('[CONNECTOR] exit')" class="bi bi-door-open"></i>
                 </div>
             </div>
+            <!-- Main content area where pages are loaded -->
             <div id="content" class="position-relative">
 
             </div>
+            <!-- Cookie consent toast -->
             <div class="toast position-absolute" style="bottom: 0.5rem; right: 0.5rem;" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header">
                     <strong class="me-auto">Hey there!</strong>
@@ -63,7 +94,9 @@
                 </div>
             </div>
         </div>
+        <!-- Popper.js for Bootstrap tooltips and popovers -->
         <script src="assets/popper/dist/umd/popper.min.js"></script>
+        <!-- Bootstrap JavaScript -->
         <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
